# otterai-py

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  run.sh  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
otterai/: otterai.py
tests/: test_otterai.py
