[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otterai"
version = "0.0.1"
description = "Unofficial Otter.ai Python API"
license = { text = "MIT" }
readme = "README.md"
dependencies = ["requests>=2.32.3", "requests-toolbelt>=1.0.0"]
keywords = ["python", "otterai", "api"]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "pytest-cov>=5.0.0", "python-dotenv>=1.0.1"]

[tool.setuptools]
packages = ["otterai"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=otterai --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["otterai"]

[tool.coverage.report]
show_missing = true
