[project]
name = "otterai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.11.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black"]
